@@ -1,116 +1,111 @@
 package com.IIogopoIIIHuk.TaskManagment_demo.controller;
 
-import com.IIogopoIIIHuk.TaskManagment_demo.DTO.TaskDTO;
 import com.IIogopoIIIHuk.TaskManagment_demo.entity.Task;
 import com.IIogopoIIIHuk.TaskManagment_demo.repo.TaskRepository;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
+import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(AdminController.class)
 class AdminControllerTest {
 
-    @Autowired
-    private MockMvc mockMvc;
-
-    @MockBean
-    private TaskRepository taskRepository;
-
-    @Autowired
-    private ObjectMapper objectMapper;
+    private final TaskRepository taskRepository = Mockito.mock(TaskRepository.class);
+    private final AdminController adminController = new AdminController(taskRepository);
+    private final MockMvc mockMvc = MockMvcBuilders.standaloneSetup(adminController).build();
 
     @Test
-    @WithMockUser(roles = "ADMIN")
     void addTaskTest() throws Exception {
-        TaskDTO taskDTO = new TaskDTO();
-        taskDTO.setTitle("Test Task");
-        taskDTO.setDescription("Task description");
-
-        Task task = Task.builder()
-                .title("Test Task")
-                .description("Task description")
-                .build();
-
-        Mockito.when(taskRepository.save(any(Task.class))).thenReturn(task);
-
         mockMvc.perform(post("/api/admin/task/add")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(taskDTO)))
-                .andExpect(status().isOk());
+                        .content("""
+                        {
+                            "title": "Test Task",
+                            "description": "Test Description",
+                            "status": "New",
+                            "priority": "1",
+                            "comments": "First comment",
+                            "authorTask": "Admin",
+                            "executorTask": "User"
+                        }
+                        """))
+                .andExpect(status().isOk()); // Ожидаем 200 OK
+
+        verify(taskRepository, times(1)).save(any(Task.class)); // Проверяем вызов метода save()
     }
 
     @Test
-    @WithMockUser(roles = "ADMIN")
     void getAllTaskTest() throws Exception {
-        Task task = Task.builder()
-                .title("Task 1")
-                .description("Description 1")
-                .build();
-
-        Mockito.when(taskRepository.findAll()).thenReturn(List.of(task));
+        when(taskRepository.findAll()).thenReturn(Arrays.asList(
+                new Task(1L, "Task1", "Desc1", "New", "1", "Comment1", "Admin", "User"),
+                new Task(2L, "Task2", "Desc2", "InProgress", "2", "Comment2", "Admin", "User2")
+        ));
 
         mockMvc.perform(get("/api/admin/task/getAll"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()").value(1))
-                .andExpect(jsonPath("$[0].title").value("Task 1"));
+                .andExpect(jsonPath("$", hasSize(2)));
+
+        verify(taskRepository, times(1)).findAll();
     }
 
     @Test
-    @WithMockUser(roles = "ADMIN")
     void getTasksByAuthorTest() throws Exception {
-        Task task = Task.builder()
-                .authorTask("Author1")
-                .title("Task 1")
-                .build();
-
-        Mockito.when(taskRepository.findAllByAuthorTask(eq("Author1"))).thenReturn(List.of(task));
+        when(taskRepository.findAllByAuthorTask("Admin")).thenReturn(Collections.singletonList(
+                new Task(1L, "Task1", "Desc1", "New", "1", "Comment1", "Admin", "User")
+        ));
 
         mockMvc.perform(get("/api/admin/task/author-tasks")
-                        .param("authorTask", "Author1"))
+                        .param("authorTask", "Admin"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()").value(1))
-                .andExpect(jsonPath("$[0].authorTask").value("Author1"));
+                .andExpect(jsonPath("$", hasSize(1)));
+
+        verify(taskRepository, times(1)).findAllByAuthorTask("Admin");
     }
 
     @Test
-    @WithMockUser(roles = "ADMIN")
     void updateTaskTest() throws Exception {
-        Task task = Task.builder()
-                .id(1L)
-                .title("Updated Task")
-                .build();
-
-        Mockito.when(taskRepository.existsById(eq(1L))).thenReturn(true);
-        Mockito.when(taskRepository.save(any(Task.class))).thenReturn(task);
+        Task task = new Task(1L, "Updated Task", "Updated Desc", "Done", "1", "Updated comment", "Admin", "User");
+        when(taskRepository.existsById(1L)).thenReturn(true);
+        when(taskRepository.save(any(Task.class))).thenReturn(task);
 
         mockMvc.perform(put("/api/admin/task/update")
                         .param("id", "1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(task)))
-                .andExpect(status().isOk())
-                .andExpect(content().string(task.toString()));
+                        .content("""
+                        {
+                            "id": 1,
+                            "title": "Updated Task",
+                            "description": "Updated Desc",
+                            "status": "Done",
+                            "priority": "1",
+                            "comments": "Updated comment",
+                            "authorTask": "Admin",
+                            "executorTask": "User"
+                        }
+                        """))
+                .andExpect(status().isOk());
+
+        verify(taskRepository, times(1)).save(any(Task.class));
     }
 
     @Test
-    @WithMockUser(roles = "ADMIN")
     void deleteTaskTest() throws Exception {
-        Mockito.doNothing().when(taskRepository).deleteById(eq(1L));
+        doNothing().when(taskRepository).deleteById(1L);
 
         mockMvc.perform(delete("/api/admin/task/delete")
                         .param("id", "1"))
                 .andExpect(status().isOk());
+
+        verify(taskRepository, times(1)).deleteById(1L);
     }
 }
